Fixed fonts and some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,11 @@ body {
 }
 
 header {
-  height: 75px;
   width: 900px;
-  border-image: url(../img/border-img.png) 0 0 10 0 round;
-  border-bottom: 10px;
+  padding-top: 30px;
+  padding-bottom: 15px;
+  border-image: url(../img/border-img.png) 0 0 12 0 round;
+  border-bottom: 12px;
   margin-bottom: 20px;
 }
 
@@ -16,13 +17,10 @@ hr {
   border: none;
   border-top: 1px solid #a8b2bb;
   color: #333;
-  text-align: center;
   margin-bottom: 40px;
+  width: 900px;
+  margin-top: 40px;
 }
-
-/*input[type="checkbox"] {
-display: none;
-}*/
 
 input[type="checkbox"] {
   display: inline-block;
@@ -50,13 +48,12 @@ footer p {
   position: absolute;
   display: inline-block;
   right: 182px;
-  top: 10px;
+  top: 38px;
 }
 
 .social li {
   display: inline;
-  float: right;
-  margin-right: 1px;
+  margin-left: -2px;
 }
 
 .social img {
@@ -65,7 +62,7 @@ footer p {
 }
 
 .rss {
-  margin-left: 5px;
+  padding-left: 8px;
 }
 
 .logo {
@@ -73,15 +70,27 @@ footer p {
 }
 
 .title {
-  font-family: 'Damion', cursive;
-  font-size: 2.25em;
+  font-family: 'Yellowtail', cursive;
+  font-size: 2.5em;
   position: absolute;
-  top: -20px;
+  top: -27px;
 }
 
-.title-slogan {
+.slogan {
+  font-family: 'Abel', sans-serif;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  color: black;
+  letter-spacing: -0.5px;
   position: relative;
-  left: 8px;
+  top: -3px;
+  left: 3px;
+  color: #595959;
+}
+
+header p {
+  position: relative;
+  left: 5px;
 }
 
 .recipe-title {
@@ -89,29 +98,16 @@ footer p {
   font-weight: lighter;
 }
 
-.post-date, .print, .slogan {
-  font-family: "Inconsolata", monospace;
+.post-date, .print-block p {
+  font-family: "Abel", sans-serif;
   text-transform: uppercase;
   font-size: 0.8em;
   color: gray;
-  letter-spacing: -0.5px;
-}
-
-.slogan {
-  position: relative;
-  top: -3px;
-  color: #a8b2bb;
 }
 
 .post-date {
   position: relative;
   bottom: 25px;
-  color: #a8b2bb;
-}
-
-.print {
-  font-size: 0.5em;
-  display: inline;
   color: #a8b2bb;
 }
 
@@ -122,16 +118,23 @@ footer p {
   bottom: 67px;
 }
 
+.print-block p {
+  font-size: 0.5em;
+  display: inline;
+  color: #a8b2bb;
+}
+
 .recipe-text {
   position: relative;
   bottom: 40px;
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Droid Serif', serif;
   color: gray;
 }
 
 .recipe-paragraph {
   text-indent: 30px;
-  font-size: 1.26em;
+  font-size: 1.04em;
+  line-height: 22px;
 }
 
 .ingredients {
@@ -141,8 +144,8 @@ footer p {
   width: 899px;
   position: relative;
   bottom: 20px;
-  border-image: url(../img/border-img.png) 0 0 10 0 round;
-  border-bottom: 10px;
+  border-image: url(../img/border-img.png) 0 0 12 0 round;
+  border-bottom: 12px;
   padding-bottom: 25px;
 }
 
@@ -150,11 +153,11 @@ footer p {
   display: inline-block;
   width: 350px;
   height: 305px;
-  font-family: 'PT Sans Narrow', sans-serif;
-  font-size: 1.49em;
+  font-family: 'Patrick Hand', sans-serif;
+  font-size: 1.5em;
   list-style-type: none;
   position: relative;
-  top: 14px;
+  top: 12px;
   color: gray;
 }
 
@@ -177,37 +180,37 @@ footer p {
 }
 
 .author h1, .author p {
-    font-family: 'Slabo 27px', serif;
+    font-family: 'Droid Serif', serif;
     display: inline-block;
     position: relative;
     padding-left: 20px;
-    font-size: 1.26em;
+    font-size: 1em;
 }
 
 .author p {
   color: gray;
   width: 600px;
-  bottom: 50px;
+  bottom: 25px;
 }
 
 .author h1 {
-  bottom: 20px;
+  bottom: 10px;
 }
 
 .author h2 {
   float: right;
   display: inline-block;
-  height: 30px;
-  width: 125px;
-  padding-left: 35px;
-  padding-top: 10px;
-  font-family: 'Inconsolata', monospace;
-  font-size: 1em;
+  height: 40px;
+  width: 150px;
+  padding-left: 45px;
+  padding-top: 13px;
+  font-family: 'Abel', sans-serif;
+  font-size: 1.2em;
   letter-spacing: -0.2px;
   position: relative;
   background-color: #bc7058;
   bottom: 62px;
-  color: #fff;
+  color: #feffff;
   text-transform: none;
 }
 
